Changelog
=========

0.3 - unreleased
----------------


0.2 - 2010-11-15
----------------

- Updated distributions:
  * z3c.recipe.usercrontab = 1.1

- Updated to haproxy = 1.4.9 and Varnish = 2.1.4.
  [hannosch]

- Move in configuration files into this Subversion location, avoiding an
  external definition.
  [hannosch]

0.1 - 2010-11-15
----------------

- Updated distributions:
  * intranett.policy = 0.5
  * intranett.theme = 0.4.
  * plone.app.controlpanel = 2.0.4
  * plone.app.z3cform = 0.5.1

- Added ZEO authentication. This closes
  https://jira.jarn.com/browse/INTRANETT-112.
  [hannosch]