@@ -1,0 +1,37 @@
+# NOT USED YET !!!
+
+upstream backends {
+        server localhost:8080;
+}
+
+server {
+        listen 195.62.125.11:80;
+
+        rewrite ^(.*)$ https://dev.intranett.no$1 permanent;
+}
+
+server {
+        listen 195.62.125.11:443;
+
+        ssl on;
+        ssl_certificate /etc/ssl/STAR_intranett_no.crt;
+        ssl_certificate_key /etc/ssl/STAR_intranett_no.key;
+
+        client_max_body_size 10m;
+        server_name dev.intranett.no;
+        access_log /var/log/nginx/dev.intranett.no_access.log;
+
+        error_page 500 502 503 504  /500.html;
+
+        location /500.html {
+                root /srv/jarn/nginx-sites/errors;
+        }
+
+        location /under_construction.jpg {
+                root /srv/jarn/nginx-sites/errors;
+        }
+
+        location / {
+                proxy_pass http://backends/VirtualHostBase/https/dev.intranett.no:443/Plone/VirtualHostRoot/;
+        }
+}
